Adicionando a sessão de Tecnologia

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                     <li>
                         <a href="#games" title="Ir para a seção de jogos">Jogos</a>
                     </li>
+                    <li>
+                        <a href="#technology" title="Ir para a seção de tecnologia">Tecnologia</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -207,6 +210,60 @@
             </div>
         </div>
     </section>
+        <!-- == Sessão de Tecnologia == -->
+        <section id="technology">
+            <div class="container">
+                <h2>Tecnologia</h2>
+                <!-- == Artigos da sessão de Tecnologia == -->
+                <div class="articles">
+                    <article>
+                        <img src="./imagens/chip-cerebral.jpg" alt="Imagem de um cérebro humano com um chip cerebral implantado" />
+                        <header>
+                            <time>24/02/2024 às 2:04</time>
+                        </header>
+                        <h3>Elon Musk Implanta Primeiro Chip Cerebral em Humano</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam
+                            labore
+                            architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur
+                            error?
+                            Laborum, modi itaque. Sunt.
+                        </p>
+                        <a href="#" title="Leia a notícia completa">Ler mais</a>
+                    </article>
+                    <article>
+                        <img src="./imagens/inteligencia.jpeg" alt="Imagem de uma mão robótica e uma mão humana se tocando e formando uma energia luminosa amarela com a ponta de seus dedos indicadores" />
+                        <header>
+                            <time>24/02/2024 às 2:04</time>
+                        </header>
+                        <h3>Inteligencias Artificiais: Saiba Como Elas Mudam o Nosso Mundo</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam
+                            labore
+                            architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur
+                            error?
+                            Laborum, modi itaque. Sunt.
+                        </p>
+                        <a href="#" title="Leia a notícia completa">Ler mais</a>
+                    </article>
+                    <article>
+                        <img src="./imagens/intel.jpg" alt="Imagem de um processador intel" />
+                        <header>
+                            <time>24/02/2024 às 2:04</time>
+                        </header>
+                        <h3>Processadores Sobem de Preço!! Intel Entra em Crise</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam
+                            labore
+                            architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur
+                            error?
+                            Laborum, modi itaque. Sunt.
+                        </p>
+                        <a href="#" title="Leia a notícia completa">Ler mais</a>
+                    </article>
+                </div>
+            </div>
+        </section>
 </body>
 
 </html>
