javascript da lista

--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
     <main>
         <h1>lista de tarefas</h1>
         <div class="content">
-            <div class="input-content">
-                <input type="text" id="tarefa">
+            <form class="input-content">
+                <input type="text" id="task">
                 <button type="submit">Adicionar</button>
-            </div>
-            <ul>
-                <li>minha tarefa</li>
+            </form>
+            <ul id="task-container">
             </ul>
         </div>
     </main>
